db 모델 수정 및 기능 수정